test_case/rust-lang_rust/85263_841350092_1.rs
rust
match (Foo { bar: 42 }) {
    Foo { oneval: x @ OneVal::One } => { //~ ERROR access to union field is unsafe
        println!("reached!");
    },
}
